--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,9 @@
 {
-  "headers": [
+  "builds": [
     {
-      "source": "/(img|assets)/(.*)",
-      "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
-      ]
-    },
-    {
-      "source": "/(.*)",
-      "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=0, s-maxage=31536000, stale-while-revalidate=60" },
-        { "key": "Strict-Transport-Security", "value": "max-age=63072000; includeSubDomains; preload" },
-        { "key": "X-Content-Type-Options", "value": "nosniff" },
-        { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" }
-      ]
+      "src": "astro.config.mjs",
+      "use": "@vercel/astro"
     }
   ]
 }
+
